# quiver

./: .dockerignore  .gitignore  404.html  AGENT.md  CHANGELOG.md  Dockerfile  F01_BENCHMARK_SUMMARY.md  INSTALL.md  Makefile  README.md  SECURITY.md  benchmark.sh  check_clickhouse.py  cobertura.xml  debug_redis_adapter.py  index.html  mkdocs.yml  monitor_backends.sh  objects.inv  quiver-rfc-v2.md  seed_redis.py  session-ses_3470.md  sitemap.xml  test-config.yaml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  integration-tests.yml  main-ci.yml  proto-validation.yml  python-ci.yml  release.yml  rust-ci.yml  security-audit.yml
benchmarks/: .gitignore  Cargo.toml  README.md  baseline_app.py  baseline_quiver.py  fixtures.json  ingest.py  lib.rs  main.rs  pyproject.toml  scenarios.py
benchmarks/benches/: recommendation_benchmark.rs
benchmarks/config/: redis-postgres-s3.yaml  redis-postgres.yaml  s3.yaml
benchmarks/inference/: recommendation_system.rs
benchmarks/python/: README.md  pyproject.toml  run_benchmark.py
benchmarks/python/quiver_benchmarks/: __init__.py  benchmark_runner.py  config.py  environment.py  models.py  run_benchmark.py
benchmarks/python/quiver_benchmarks/clients/: direct_redis.py  http_client.py  quiver_client.py
benchmarks/python/quiver_benchmarks/servers/: http_server.py
concepts/architecture/: index.html
concepts/configuration/: index.html
concepts/fanout/: index.html
concepts/feature-views/: index.html
concepts/temporal-queries/: index.html
docs/: hero-preview.html  index.md  python-client-interface.md
docs/concepts/: architecture.md  configuration.md  fanout.md  feature-views.md  temporal-queries.md
docs/getting-started/: installation.md  introduction.md  quickstart.md
docs/guides/: docker.md  kubernetes-sidecar.md  multi-backend.md
docs/reference/: configuration.md  python-client.md
docs/stylesheets/: home.css
examples/: INDEX.md  README.md  check_data.py  check_ecommerce_redis.py  check_redis.py  check_redis_types.py  check_seed.py  docker-compose.yaml  e2e_metrics_test.py  flush_redis.py  get_metrics.py  ingest.py  list_redis_keys.py  pyproject.toml  quick-start.sh  read.py  test_metadata_headers.py  test_query.py  test_raw_output.py  test_redis_direct.py  test_schema.py  validate-config.sh  verify_sessions.py
examples/config/: README.md  clickhouse_basic.yaml  clickhouse_single_table.yaml  clickhouse_temporal.yaml  clickhouse_with_credentials.yaml  development.yaml  hybrid-multi-adapter.yaml  memory-only.yaml  memory.yaml  postgres-production.yaml  postgres.yaml  redis-realtime.yaml  redis.yaml  s3_parquet_basic.yaml  s3_parquet_local.yaml  s3_parquet_partitioned.yaml  s3_parquet_with_credentials.yaml
examples/config/benchmark/: fanout-2x.yaml  fanout-3x.yaml  postgres-baseline.yaml  redis-baseline.yaml
examples/config/clickhouse/: advanced.yaml  basic.yaml  single-table.yaml  temporal.yaml
examples/config/memory/: dev.yaml  perf.yaml
examples/config/multi-adapter/: all-adapters.yaml  clickhouse-redis.yaml  fanout-sparse-join.yaml  hybrid.yaml  postgres-redis-s3.yaml  postgres-s3.yaml  redis-s3.yaml
examples/config/postgres/: advanced.yaml  basic.yaml  temporal.yaml
examples/config/redis/: advanced.yaml  basic.yaml
examples/config/s3/: basic.yaml  local.yaml  with-credentials.yaml
examples/data/: fixtures.json
examples/docker/: README.md  docker-compose.yaml  init-db.sql
examples/python_example/: example.py  ingest.py  pyproject.toml  s3_parquet_examples.py
getting-started/installation/: index.html
getting-started/introduction/: index.html
getting-started/quickstart/: index.html
guides/docker/: index.html
guides/kubernetes-sidecar/: index.html
guides/multi-backend/: index.html
overrides/: home.html
proto/v1/: Flight.proto  metadata.proto  observability.proto  serving.proto  types.proto
quiver-core/: .cargo-audit.toml  Cargo.toml  build.rs  config.yaml
quiver-core/benches/: fixtures.rs  server_setup.rs  throughput.rs
quiver-core/examples/: smoke_test.rs
quiver-core/scripts/: test_flight.py
quiver-core/src/: config.rs  demo.rs  lib.rs  logging.rs  main.rs  proto.rs  server.rs  timeout.rs  types.rs  validation.rs
quiver-core/src/adapters/: clickhouse.rs  memory.rs  mod.rs  postgres.rs  redis.rs  s3_parquet.rs  utils.rs
quiver-core/src/cache/: mod.rs
quiver-core/src/fanout/: failure.rs  merge.rs  metrics.rs  mod.rs  temporal.rs
quiver-core/src/metrics/: mod.rs  store.rs
quiver-core/src/observability/: mod.rs  server.rs
quiver-core/src/registry/: mod.rs
quiver-core/src/resolver/: mod.rs
quiver-core/tests/: fanout_integration_test.rs  integration_test.rs  metadata_headers_test.rs  metrics_observability_test.rs  observability_test.rs
quiver-python/: README.md  main.py  pyproject.toml
quiver-python/quiver/: __init__.py  _types.py  client.py  exceptions.py  models.py  observability.py  table.py
quiver-python/quiver/proto/: __init__.py  metadata_pb2.py  observability_pb2.py  observability_pb2_grpc.py  serving_pb2.py  types_pb2.py
quiver-python/src/quiver/: __init__.py  _types.py  client.py  client_full.py  exceptions.py  models.py  table.py
quiver-python/src/quiver/proto/: metadata_pb2_grpc.py  serving_pb2.py  serving_pb2_grpc.py
quiver-python/tests/: test_basic.py  test_exports.py
reference/configuration/: index.html
reference/python-client/: index.html
scripts/: build-release.sh
search/: search_index.json
