[package]
name = "quiver-benchmarks"
version = "0.1.0"
edition = "2024"
description = "ML inference benchmarks proving Quiver's value proposition"

[[bin]]
name = "benchmark"
path = "main.rs"

[lib]
name = "quiver_benchmarks"
path = "lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Arrow for data handling
arrow = "58"
arrow-flight = "58"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing framework
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tokio-test = "0.4"

[[bench]]
name = "recommendation_benchmark"
harness = false
path = "benches/recommendation_benchmark.rs"