[project]
name = "quiver-benchmarks"
version = "0.1.0"
description = "Comparative benchmarks: Quiver vs application fan-out"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=23.0.1",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "asyncio-contextmanager>=1.0.0",
    "python-dotenv>=1.0.0",
    "quiver-python",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
exclude = [
    "__pycache__",
    ".venv",
    ".pytest_cache",
]

[tool.uv.sources]
quiver-python = { path = "../quiver-python", editable = true }