[package]
name = "quiver-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "54"
arrow-flight = "54"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
bytes = "1.6"
dashmap = "6"
hdrhistogram = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tonic-health = "0.12"
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
