[package]
name = "quiver-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58"
arrow-flight = "58"
tonic = { version = "0.14", features = ["gzip", "tls-ring", "zstd"] }
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
bytes = "1.6"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.15"
tonic-health = "0.14"
tonic-reflection = "0.14"
async-stream = "0.3.6"
redis = { version = "1.0.4", features = ["tokio-comp", "aio"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
clap = { version = "4.5.60", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"
